--- a/index.css
+++ b/index.css
@@ -1,3 +1,26 @@
 body {
-    margin: 0;
+    margin: 0 auto;
+    max-width: 300px;
+    text-align: center;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    display: border-box;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+
+.cat-image {
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+button {
+    
+}
+
+#save-btn {
+
 }
