--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'DynaPuff', system-ui;
-    text-align: center;
     color: #282828;
 }
 
@@ -12,7 +11,6 @@ body {
     border: solid 5px #5F253F;
     border-radius: 10px;
     margin-top: 20px;
-    padding: 20px;
 }
 
 /* typography */
@@ -21,39 +19,61 @@ h1 {
     font-weight: 600;
 }
 
-
 /* layout */
 
 header{
     display: flex;
     justify-content: start;
-    margin-bottom: 30px;
+    padding: 20px;
 }
 
 .cat-image {
     align-self: center;
-    width: 80px;
+    width: 60px;
+}
+
+.insert-section{
+    background-color: #EF8793;
+    text-align: center;
+    padding: 25px;
 }
 
 input {
     font-size: 18px;
     font-family: inherit;
-    width: 80%;
+    width: 90%;
     padding: 10px;
-    display: border-box;
-    margin-bottom: 20px;
+    margin: 0 auto;
 }
 
 button {
-    border: none;
-    border-radius: 25px;
-    padding: 15px 25px;
     font-family: inherit;
     background-color: #95CBDD;
     color: #fff;
+    border: none;
+    border-radius: 25px;
+    padding: 15px 25px;
     margin-right: 20px;
+    margin-top: 20px;
 }
 
 .inverse{
-    background-color:#EF8793;
+    background-color: #fff;
+    color:#EF8793;
+}
+
+/* list */
+.list-items{
+    min-height: 150px;
+    padding: 20px;
+    background-image: url('images/paper.jpg');
+}
+
+/* ul{
+    padding-inline-start: 10px;
+} */
+
+li{
+    list-style-type: none;
+    font-size: 16px;
 }
